--- a/settings/internal/com.kms.katalon.composer.testcase.properties
+++ b/settings/internal/com.kms.katalon.composer.testcase.properties
@@ -1,2 +1,2 @@
-#Tue Jul 07 18:39:05 IST 2020
-testCaseTag="validlogin,signup"
+#Wed Jul 08 14:52:11 IST 2020
+testCaseTag="validlogin,signup,Invalidlogin"
