--- a/.project
+++ b/.project
@@ -17,9 +17,9 @@
 	</natures>
 	<linkedResources>
 		<link>
-			<name>kat-678665995371613112.groovy</name>
+			<name>kat-6280236560022033460.groovy</name>
 			<type>1</type>
-			<location>C:/Users/User/AppData/Local/Temp/Katalon/Web Services/kat-678665995371613112.groovy</location>
+			<location>C:/Users/User/AppData/Local/Temp/Katalon/Web Services/kat-6280236560022033460.groovy</location>
 		</link>
 	</linkedResources>
 	<filteredResources>
@@ -358,6 +358,24 @@
 		</filter>
 		<filter>
 			<id>1594199535462</id>
+			<name></name>
+			<type>6</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>(.*\.svn-base$)|(.*\.png$)|(.*\.log$)|(.*\.xlsx$)|(.*\.xls$)|(.*\.csv$)|(.*\.txt$)</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1594201188925</id>
+			<name></name>
+			<type>10</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>.*\.svn$</arguments>
+			</matcher>
+		</filter>
+		<filter>
+			<id>1594201189026</id>
 			<name></name>
 			<type>6</type>
 			<matcher>
